testsuite/poke.pkl/cast-diag-9.pk
/* { dg-do compile } */

var a = 10 as void; /* { dg-error "invalid cast" } */
